--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <header>
         <h1>Welcome to our</h1>
     </header>
+    <main>
+        <div class="container">
+            <h2>Our products</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis et, atque praesentium facere culpa rem ullam recusandae nisi tenetur nam? Corrupti error eligendi aut veritatis a? Cumque perferendis placeat iusto.</p>
+        </div>
+    </main>
     
 </body>
 </html>
