i added new main tag to index.html

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
         <h1>Welcome to our</h1>
     </header>
-    <main>
-        <div class="container">
-            <h2>Our products</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis et, atque praesentium facere culpa rem ullam recusandae nisi tenetur nam? Corrupti error eligendi aut veritatis a? Cumque perferendis placeat iusto.</p>
-        </div>
-    </main>
+   <main>
+    <div class="container">
+        <h2>Our products</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi est adipisci eaque aliquam quos, recusandae hic ipsum, nostrum architecto accusamus quis totam dolorem aspernatur. Temporibus quibusdam nulla recusandae voluptates eos?</p>
+    </div>
+   </main>
     
 </body>
 </html>
