added footer in index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi est adipisci eaque aliquam quos, recusandae hic ipsum, nostrum architecto accusamus quis totam dolorem aspernatur. Temporibus quibusdam nulla recusandae voluptates eos?</p>
     </div>
    </main>
-    
+    <footer>
+        <p &copy;>Copyright Reserved 2022</p>
+    </footer>
 </body>
 </html>
