--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <header>
         <h1>Welcome to our</h1>
+
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
    <main>
     <div class="container">
@@ -18,7 +26,7 @@
     </div>
    </main>
     <footer>
-        <p &copy;>Copyright Reserved 2022</p>
+        <p &copy;>Copyright Reserved 2022 </p>
     </footer>
 </body>
 </html>
